디시콘 수정

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         // 이모티콘
         window.emoticon = {};
-        window.emoticon.address = "https://lastorder-dc.github.io/ChatAssistX-Client/dccon.json";
+        window.emoticon.address = "https://myst1ccat.github.io/ChatAssistX-Client/dccon.json";
         window.emoticon.isActive = false; // 이모티콘 목록 불러와졌는지 여부
         window.emoticon.list = {}; // 이모티콘 목록
         window.emoticon.twitch = "https://cdn.rawgit.com/Lastorder-DC/dccon/v171013/global.json";
