--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         // 스트리머 전용 명령어(~통계,~투표) 를 사용하기 위한 아이디 지정
         window.config.streamer = {
-            "twitch" : url.searchParams.get("myst1c_cat"),
+            "myst1c_cat" : url.searchParams.get("twitch"),
             "kakaopot" : url.searchParams.get("kakaopot"),
             "youtube" : url.searchParams.get("youtube")
         }
