--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         // 스트리머 전용 명령어(~통계,~투표) 를 사용하기 위한 아이디 지정
         window.config.streamer = {
-            "myst1c_cat" : url.searchParams.get("twitch"),
+            "twitch" : url.searchParams.get("myst1c_cat"),
             "kakaopot" : url.searchParams.get("kakaopot"),
             "youtube" : url.searchParams.get("youtube")
         }
@@ -77,7 +77,7 @@
         window.chat.config.font = "Jeju Gothic";
         window.chat.config.fontUsernameSize = 14;
         window.chat.config.fontUsernameColor = "255, 255, 255";
-        window.chat.config.fontChatSize = 16;
+        window.chat.config.fontChatSize = 18;
         window.chat.config.fontChatColor = "255, 255, 255";
         window.chat.config.backgroundColor = "255, 255, 255";
         window.chat.config.backgroundAlpha = 0;
