--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         var url = new URL(url_string);
 
         // ChatAssist 설정 변수
-        window.config = {mystic_cat};
+        window.config = {};
         // 채널 아이디. 주소끝 ?preset=(프리셋아이디) 를 붙여 지정합니다.
         // 강제지정은 url.searchParams.get("preset") 을 "프리셋명" 으로 바꾸면 됩니다.
         window.config.preset = url.searchParams.get("myst1c_cat");
